<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2022 Omer Karaca
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="send_feedback_title">Send Feedback</string>
    <string name="send_feedback_confirmation">Tap here to send feedback</string>
    <string name="send_feedback_success_title">Thank you for your feedback #%1$d</string>
    <string name="send_feedback_success_description">Tap here to see the details</string>

    <string name="feedback_title">Title: </string>
    <string name="feedback_assignees">Assignees: </string>
    <string name="feedback_labels">Labels: </string>
    <string name="feedback_title_hint">Give a short description</string>
    <string name="feedback_description_hint">Describe the issue you are experiencing.
        Please detail as much information as possible regarding your issue.</string>
    <string name="feedback_screenshot_title">Screenshot</string>
    <string name="feedback_screenshot_action">Tap here to highlight or hide info</string>
    <string name="feedback_logs_title">System Logs</string>
    <string name="feedback_logs_action">Tap here to view</string>

    <string name="description">Description</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="app_and_device_data">App &amp; Device Data</string>
    <string name="user_attributes">User Attributes</string>
    <string name="app_id">App ID</string>
    <string name="app_version">App Version</string>
    <string name="app_build_type">Build Type</string>
    <string name="device">Device</string>
    <string name="os_version">OS Version</string>
    <string name="language">Language</string>
    <string name="display">Display</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>

    <string name="common_error">Something went wrong</string>
    <string name="notification_channel_name">Feedback Results</string>
    <string name="notification_channel_name_description">Providing extra information
        to users about their feedbacks</string>
</resources>
