<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_feedback"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="?attr/colorOnSurface"
        app:popupTheme="@style/Theme.Beetle"
        app:title="@string/send_feedback_title" />

    <View
        android:id="@+id/view_toolbar_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/feedback_title"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_toolbar_divider" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:hint="@string/feedback_title_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="?attr/colorOnSurface"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="@id/text_view_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier_inputs"
        app:layout_constraintTop_toTopOf="@id/text_view_title" />

    <View
        android:id="@+id/view_title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/text_view_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_assignees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/feedback_assignees"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:textColor="?attr/colorOnSurface"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_title_divider"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_assignees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/text_view_assignees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier_inputs"
        app:layout_constraintTop_toTopOf="@id/text_view_assignees"
        tools:itemCount="1"
        tools:listitem="@layout/item_assignee"
        tools:visibility="visible" />

    <View
        android:id="@+id/view_assignees_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_view_assignees"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/feedback_labels"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:textColor="?attr/colorOnSurface"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_assignees_divider"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_labels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/text_view_labels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier_inputs"
        app:layout_constraintTop_toTopOf="@id/text_view_labels"
        tools:itemCount="1"
        tools:listitem="@layout/item_label"
        tools:visibility="visible" />

    <View
        android:id="@+id/view_labels_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_view_labels"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/feedback_description_hint"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="?attr/colorOnSurface"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@id/card_view_screenshot"
        app:layout_constraintTop_toBottomOf="@id/view_labels_divider" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_screenshot"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/card_view_logs">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_screenshot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/layout_logs">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_screenshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_screenshot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feedback_screenshot_title"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintBottom_toTopOf="@id/text_view_edit_screenshot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkbox_screenshot"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_edit_screenshot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feedback_screenshot_action"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkbox_screenshot"
                app:layout_constraintTop_toBottomOf="@id/text_view_screenshot"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_screenshot"
                android:layout_width="96dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_logs"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_logs"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_logs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_logs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feedback_logs_title"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintBottom_toTopOf="@id/text_view_view_logs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkbox_logs"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_view_logs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feedback_logs_action"
                android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkbox_logs"
                app:layout_constraintTop_toBottomOf="@id/text_view_logs"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_inputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="text_view_title, text_view_assignees, text_view_labels" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:elevation="8dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
